# hit

./: LICENSE  README.md  hit.cabal
src/Numeric/: Information.hs
src/Numeric/Information/: Distribution.hs  IT.hs  Model.hs  Util.hs
src/Numeric/Information/Model/: IT.hs
